WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23475
fast/text/find-backwards.html fails with ICU disabled SearchBuffer
https://bugs.webkit.org/show_bug.cgi?id=23475
Summary
fast/text/find-backwards.html fails with ICU disabled SearchBuffer
Simon Hausmann
Reported
2009-01-22 08:03:06 PST
The test fast/text/find-backwards.htm hangs infinitely when building WebCore/editing/TextIterator.cpp _without_ the ICU based SearchBuffer. Toggling the #ifdefs in just TextIterator.cpp is enough to reproduce it.
Attachments
patch
(2.20 KB, patch)
2009-01-23 12:34 PST
,
Darin Adler
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Hausmann
Comment 1
2009-01-22 08:03:41 PST
See also 23109
Simon Hausmann
Comment 2
2009-01-22 08:04:03 PST
Err, I mean
bug #23109
:)
Darin Adler
Comment 3
2009-01-23 12:34:19 PST
Created
attachment 26979
[details]
patch
Anders Carlsson
Comment 4
2009-01-23 17:56:02 PST
Comment on
attachment 26979
[details]
patch r=me
Darin Adler
Comment 5
2009-01-23 18:23:32 PST
http://trac.webkit.org/changeset/40206
Darin Adler
Comment 6
2009-01-28 13:11:32 PST
***
Bug 23571
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug